# FusionLibrary

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
libs/glad_web/include/glad/: glad.h
libs/glad_web/src/: glad.c
libs/raudio/src/: README.md  raudio.c  raudio.h
shaders/: outline.fs  shader.fs  shader.vs  text.fs  text.vs
src/: main.cpp  main.txt  shader.cpp  shader.h
src/audio/: audio_device.cpp  audio_device.h  music.cpp  music.h  sound.cpp  sound.h
src/core/: core.cpp  core.h  font_data.h  fusion_math.h  gamepad.cpp  gamepad.h  input.cpp  input.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  window.cpp  window.h
src/graphics/: camera2d.cpp  camera2d.h  font.cpp  font.h  render_texture.cpp  render_texture.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_code.h  sprite.cpp  sprite.h  text.cpp  text.h  texture.cpp  texture.h  transformable.cpp  transformable.h  vertex.h
src/platform/: platform.h  platform_desktop_glfw.cpp  platform_desktop_glfw.h  platform_web.cpp  platform_web.h
src/system/: fusion_utf8.cpp  fusion_utf8.h
